--- a/app/app.component.css
+++ b/app/app.component.css
@@ -1,19 +1,3 @@
- /* .flex {
-    font: 14px Arial;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  .flex > div {
-    flex: 1 1 auto;
-    width: 33.3%;
-    box-sizing:border-box;
-    border:1px solid black;
-    text-align:center;
-    line-height:20px;
-    padding:5px;
-  }
-*/
 
 
 
@@ -36,15 +20,17 @@
  }
 
  .smallSquare {
-  position: relative;
-  width: 1vw;
-  height: 1vw;
+  width: 0.5vw;
+  height: 0.5vw;
+  cursor: pointer;
 }
 
 .smallFlex {
   display: flex;
   flex-wrap: wrap;
-  width: 4.3%;
+  width: 1.5%;
+  margin: 0.05%;
+  position: relative;
 }
 
 .smallFlex>div {
@@ -56,7 +42,7 @@
   position: relative;
   width: 3vw;
   height: 3vw;
-  cursor: pointer
+  cursor: pointer;
 }
 
 .innerFlex {
@@ -71,13 +57,7 @@
   box-sizing: border-box;
   /* margin: 1%; */
 }
- /* div {
-    float:left;
-    width: 30%;
-    padding-bottom: 30%;  = width for a 1:1 aspect ratio 
-    margin:1.66%;
-    background-color: #1E1E1E;
-} */
+
 
 mat-grid-tile {
   background: lightblue;
@@ -86,16 +66,21 @@ mat-grid-tile {
 #circle {
   width: 4px;
   height: 4px;
-  margin: 1px;
+  margin: 2.5px;
   border-radius: 25px;
   background: black;
   position: absolute;
 }
 
+
 .wrapper {
   display: flex;
 }
 
-.squareGraph {
-  
+#dot {
+  width: 1.75px;
+  height: 1.75px;
+  border-radius: 50%;
+  background: black;
+  position: absolute;
 }
