--- a/app/app.component.css
+++ b/app/app.component.css
@@ -2,85 +2,90 @@
 
 
  .square {
-   width: 10vw;
-   height: 10vw;
-   position: relative;
+    width: 10vw;
+    height: 10vw;
+    position: relative;
+  }
+ 
+  .flex {
+    display: flex;
+    flex-wrap: wrap;
+    width: 37.3%
+  }
+ 
+  .flex>div {
+    flex: 1 1 auto;
+    box-sizing: border-box;
+    margin: 0.5%;
+  }
+ 
+  .smallSquare {
+   width: 0.5vw;
+   height: 0.5vw;
+   cursor: pointer;
  }
-
- .flex {
+ 
+ .smallFlex {
    display: flex;
    flex-wrap: wrap;
-   width: 37.3%
+   width: 1.5%;
+   margin: 0.05%;
+   position: relative;
  }
-
- .flex>div {
+ 
+ .smallFlex>div {
    flex: 1 1 auto;
    box-sizing: border-box;
-   margin: 0.5%;
+ }
+ 
+ .innerSquare {
+   position: relative;
+   width: 3vw;
+   height: 3vw;
+   cursor: pointer;
+ }
+ 
+ .innerFlex {
+   display: flex;
+   flex-wrap: wrap;
+   width: 10%;
+   margin: 0.25%;
+ }
+ 
+ .innerFlex>div {
+   flex: 1 1 auto;
+   box-sizing: border-box;
+   /* margin: 1%; */
+ }
+ 
+ 
+ mat-grid-tile {
+   background: lightblue;
+ }
+ 
+ #circle {
+   width: 45%;
+   height: 50%;
+   margin: 15%;
+   border-radius: 85%;
+   background: black;
+   position: absolute;
+ }
+ 
+ 
+ .wrapper {
+   display: flex;
+ }
+ 
+ #dot {
+   width: 25%;
+   height: 25%;
+   border-radius: 80%;
+   margin: 9.05%;
+   background: black;
+   position: absolute;
  }
 
- .smallSquare {
-  width: 0.5vw;
-  height: 0.5vw;
-  cursor: pointer;
-}
-
-.smallFlex {
-  display: flex;
-  flex-wrap: wrap;
-  width: 1.5%;
-  margin: 0.05%;
-  position: relative;
-}
-
-.smallFlex>div {
-  flex: 1 1 auto;
-  box-sizing: border-box;
-}
-
-.innerSquare {
-  position: relative;
-  width: 3vw;
-  height: 3vw;
-  cursor: pointer;
-}
-
-.innerFlex {
-  display: flex;
-  flex-wrap: wrap;
-  width: 10%;
-  margin: 0.25%;
-}
-
-.innerFlex>div {
-  flex: 1 1 auto;
-  box-sizing: border-box;
-  /* margin: 1%; */
-}
-
-
-mat-grid-tile {
-  background: lightblue;
-}
-
-#circle {
-  width: 4px;
-  height: 4px;
-  margin: 2.5px;
-  border-radius: 25px;
-  background: black;
-  position: absolute;
-}
-
-
-.wrapper {
-  display: flex;
-}
-
-#dot {
-  width: 1.75px;
-  height: 1.75px;
-  border-radius: 50%;
-  background: black;
-  position: absolute;
-}
+ .squareGraph div {
+     border: none !important;
+ }
